[gd_scene load_steps=4 format=2]

[ext_resource path="res://tanks/Tank.tscn" type="PackedScene" id=1]
[ext_resource path="res://EnemyTankScript.gd" type="Script" id=2]
[ext_resource path="res://UI/UnitDisplay.tscn" type="PackedScene" id=3]

[node name="EnemyTank" instance=ExtResource( 1 )]
collision_mask = 11
script = ExtResource( 2 )
rotation_speed = 1.0
gun_cooldown = 0.4
max_health = 100
turret_speed = 1.0

[node name="Muzzle" parent="Turret" index="0"]
position = Vector2( 80, 0 )

[node name="DetectRadius" type="Area2D" parent="." index="4"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius" index="0"]

[node name="LookAhead" type="RayCast2D" parent="." index="5"]
visible = false
position = Vector2( 0, 20 )
enabled = true
cast_to = Vector2( 100, 0 )
collision_mask = 7

[node name="LookAhead2" type="RayCast2D" parent="." index="6"]
visible = false
position = Vector2( 0, -20 )
cast_to = Vector2( 100, 0 )
collision_mask = 7

[node name="UnitDisplay" parent="." index="7" instance=ExtResource( 3 )]
position = Vector2( 10, -40 )
[connection signal="take_damage" from="." to="UnitDisplay" method="update_healthbar"]
[connection signal="body_entered" from="DetectRadius" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="DetectRadius" to="." method="_on_Area2D_body_exited"]
